# django-autotyping

./: 404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yml  tests.yml
api/dynamic_stubs/rules/: index.html
api/explicit_type_hints/rules/: index.html
api/typing/: index.html
changelog/: index.html
context/: index.html
docs/: context.md  index.md
docs/api/: typing.md
docs/api/dynamic_stubs/: rules.md
docs/api/explicit_type_hints/: rules.md
docs/usage/: dynamic_stubs.md  explicit_type_hints.md
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
search/: search_index.json
src/django_autotyping/: __init__.py  __main__.py  _compat.py  app_settings.py  apps.py  cli.py  compat.py  django_utils.py  main.py  models.py  typing.py
src/django_autotyping/codemodding/: __init__.py  cli.py  compat.py  django_context.py  django_utils.py  main.py  models.py
src/django_autotyping/codemodding/codemods/: __init__.py  base.py  forward_relation_typing_codemod.py
src/django_autotyping/codemods/: __init__.py  any_to_one_typing_visitor.py  forward_relation_typing_codemod.py  forward_relation_typing_visitor.py
src/django_autotyping/management/commands/: _utils.py  add_type_hints.py  generate_stubs.py
src/django_autotyping/stubbing/: __init__.py  django_context.py  settings.py  stub_settings.py
src/django_autotyping/stubbing/codemods/: __init__.py  _global_settings_types.py  _model_creation.py  _utils.py  auth_functions_codemod.py  base.py  call_command_codemod.py  constants.py  create_overload_codemod.py  forward_relation_overload_codemod.py  get_model_overload_codemod.py  model_init_overload_codemod.py  query_lookups_overload_codemod.py  reverse_overload_codemod.py  settings_codemod.py  template_loading_codemod.py  utils.py
src/django_autotyping/stubbing/django_context/: __init__.py  _management_utils.py  _template_utils.py  _url_utils.py  django_context.py
src/django_autotyping/vendoring/monkeytype/: __init__.py  type_checking_imports_transformer.py
tests/: conftest.py
tests/codemodding/: test_dja001.py
tests/codemodtestproj/: manage.py
tests/codemodtestproj/codemodtestproj/: settings.py
tests/codemodtestproj/codemodtestproj/firstapp/: apps.py  models.py
tests/codemodtestproj/codemodtestproj/secondapp/: apps.py
tests/helpers/: __init__.py  utils.py
tests/sampleproject/sampleproject/: settings.py
tests/sampleproject/sampleproject/firstapp/: apps.py  models.py
tests/sampleproject/sampleproject/secondapp/: apps.py
tests/stubbing/: test_stubs.py
tests/stubbing/testfiles/: djas001.py  djas001_allow_non_set_type.py  djas001_no_plain_references.py  djas002_003.py  djas002_003_no_model_fields_optional.py  djas010.py  djas011.py  djas016.py  djas017.py
tests/stubstestproj/: settings.py
tests/stubstestproj/accounts/: models.py
tests/stubstestproj/appwithoutmodelsmodule/: apps.py
tests/stubstestproj/appwithoutmodelsmodule/extra_models/: __init__.py
tests/stubstestproj/firstapp/: apps.py  models.py
tests/stubstestproj/secondapp/: apps.py  models.py
tests/unit/: test_app_settings.py  test_dja001.py
usage/dynamic_stubs/: index.html
usage/explicit_type_hints/: index.html
