[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-autotyping"
description = "Automatically add type hints for Django powered applications."
authors = [
    {name = "Viicos", email = "65306057+Viicos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "django",
    "libcst>=0.4.10",
    "typing-extensions>=4.2.0; python_version < '3.11'",
]
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Viicos/django-autotyping"
Source = "https://github.com/Viicos/django-autotyping"
Changelog = "https://github.com/Viicos/django-autotyping/blob/main/CHANGELOG.md"
Documentation = "https://viicos.github.io/django-autotyping/"

[tool.setuptools.dynamic]
version = {attr = "django_autotyping.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"django_autotyping" = ["py.typed"]

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle (E)
    "W",  # pycodestyle (W)
    "F",  # Pyflakes
    "UP", # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
ignore = [
    "PLR0912",
    "PLR0913",
]
src = ["src"]
exclude = ["tests/codemodtestproj", "tests/stubstestproj", "tests/stubbing/testfiles"]
target-version = "py38"

[tool.ruff.isort]
known-first-party = ["django_autotyping"]

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = "tests/helpers"
markers = [
    "mypy: test generated stubs against mypy (deselect with '-m \"not mypy\"')",
    "pyright: test generated stubs against pyright (deselect with '-m \"not pyright\"')",
]
